# SortingWithSOLID

./: README.md
SortingWithSOLID/: .gitignore  CMakeLists.txt
SortingWithSOLID/include/: BubbleSorter.h  Duration.h  ISorter.h  InsertionSorter.h  Logger.h  SortAnalyzer.h  Sorter.h  Timer.h  sorting.h
SortingWithSOLID/src/: BubbleSorter.cpp  Duration.cpp  InsertionSorter.cpp  SortAnalyzer.cpp  Sorter.cpp  Timer.cpp  main.cpp  sorting.cpp
SortingWithSOLID/src/Duration/: Duration.cpp  Duration.h
SortingWithSOLID/src/Logger/: Logger.h
SortingWithSOLID/src/SortAnalyzer/: SortAnalyzer.cpp  SortAnalyzer.h
SortingWithSOLID/src/Sorter/: ISorter.h  Sorter.cpp  Sorter.h
SortingWithSOLID/src/Sorting/: sorting.cpp  sorting.h
SortingWithSOLID/src/Timer/: Timer.cpp  Timer.h
